# ferreus-vault

./: .gitignore  CLA.md  Cargo.toml  README.md  SECURITY.md  TRADEMARK.md  header.rs
ferreus_core/: Cargo.toml
ferreus_core/src/: crypto.rs  errors.rs  integration.rs  lib.rs  storage.rs  vault.rs
frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/features/auth/: AuthGate.tsx
frontend/src/features/vault/: CopyButton.tsx  VaultDashboard.tsx
frontend/src/lib/: api.ts
src/: crypto.rs  errors.rs  integration.rs  lib.rs  memory.rs  storage.rs  vault.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auto_lock.rs  clipboard.rs  main.rs  state.rs
src-tauri/src/commands/: clipboard.rs  entries.rs  mod.rs  security.rs  vault.rs
