[workspace]
resolver = "2"

members = ["ferreus_core", "src-tauri"]

# Shared dependency versions
[workspace.dependencies]
thiserror = "1.0"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
time = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
